--- a/cfmtoolbox-uvl-import/pyproject.toml
+++ b/cfmtoolbox-uvl-import/pyproject.toml
@@ -2,7 +2,7 @@
 name = "cfmtoolbox-uvl-import"
 version = "0.1.0"
 description = "A cfmtoolbox plugin capable of importing uvl files"
-authors = ["Jonathan Ehwald <github@ehwald.info>"]
+authors = ["Jonathan Ehwald <github@ehwald.info>", "Daniel-Delong Zhang <danielzhang728@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 
