--- a/cfmtoolbox/pyproject.toml
+++ b/cfmtoolbox/pyproject.toml
@@ -2,7 +2,7 @@
 name = "cfmtoolbox"
 version = "0.1.0"
 description = "A plugin-based toolbox for working with cardinality-based feature models"
-authors = ["Jonathan Ehwald <github@ehwald.info>"]
+authors = ["Jonathan Ehwald <github@ehwald.info>", "Daniel-Delong Zhang <danielzhang728@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 
