--- a/cfmtoolbox-uvl-import/pyproject.toml
+++ b/cfmtoolbox-uvl-import/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+cfmtoolbox = {path = "../cfmtoolbox", develop = true}
 
 [build-system]
 requires = ["poetry-core"]
