--- a/cfmtoolbox-random-sampling/pyproject.toml
+++ b/cfmtoolbox-random-sampling/pyproject.toml
@@ -10,6 +10,9 @@ readme = "README.md"
 python = "^3.11"
 cfmtoolbox = {path = "../cfmtoolbox", develop = true}
 
+[tool.poetry.plugins."cfmtoolbox.plugins"]
+random-sampling = "cfmtoolbox_random_sampling:RandomSamplingPlugin"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
