--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,10 +3,10 @@ repos:
     rev: v0.4.4
     hooks:
       - id: ruff
+        args: [--fix]
       - id: ruff-format
         args: [--check]
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.10.0
     hooks:
       - id: mypy
-
