--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,32 @@
 [tool.poetry]
-name = "cfmtoolbox-monorepo"
+name = "cfmtoolbox"
 version = "0.1.0"
-description = ""
+description = "A plugin-based toolbox for working with cardinality-based feature models"
 authors = ["Jonathan Ehwald <github@ehwald.info>", "Daniel-Delong Zhang <danielzhang728@gmail.com>", "Anna Chen <chenxanna@gmail.com>", "Valentin Kaczmarek <valentinkaczmarek@yahoo.de>"]
 license = "MIT"
 readme = "README.md"
-package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
+typer = {extras = ["all"], version = "^0.12.3"}
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.4"
 pre-commit = "^3.7.0"
 mypy = "^1.10.0"
 pytest = "^8.2.0"
-cfmtoolbox = {path = "cfmtoolbox", develop = true}
+
+[tool.poetry.scripts]
+cfmtoolbox = "cfmtoolbox.__main__:__name__"
+
+[tool.poetry.plugins."cfmtoolbox.plugins"]
+random-sampling = "cfmtoolbox.plugins.cfmtoolbox_random_sampling"
+uvl-export = "cfmtoolbox.plugins.cfmtoolbox_uvl_export"
+uvl-import = "cfmtoolbox.plugins.cfmtoolbox_uvl_import"
+
+[tool.ruff.lint]
+extend-select = ["I"]
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.ruff.lint]
-extend-select = ["I"]
