--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 typer = {extras = ["all"], version = "^0.12.3"}
+uvlparser = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.4"
