--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ uvl-export = "cfmtoolbox.plugins.uvl_export"
 uvl-import = "cfmtoolbox.plugins.uvl_import"
 json-import = "cfmtoolbox.plugins.json_import"
 json-export = "cfmtoolbox.plugins.json_export"
+featureide-import = "cfmtoolbox.plugins.featureide_import"
 
 [tool.ruff.lint]
 extend-select = ["I"]
