--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ pre-commit = "^3.7.0"
 mypy = "^1.10.0"
 pytest = "^8.2.0"
 pytest-cov = "^5.0.0"
+mkdocs = "^1.6.1"
+mkdocs-material = "^9.5.34"
 
 [tool.poetry.scripts]
 cfmtoolbox = "cfmtoolbox.__main__:__name__"
