--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,13 +29,14 @@ markdown_extensions:
 nav:
   - Introduction: index.md
   - Getting started: getting-started.md
-  - Framework:
-    - Architecture: architecture.md
-    - Plugins: plugins.md
-  - Core plugins:
+  - Plugins:
+    - Core Plugins: plugins/index.md
     - FeatureIDE Import: plugins/featureide-import.md
     - UVL Import: plugins/uvl-import.md
     - UVL Export: plugins/uvl-export.md
     - JSON Impex: plugins/json-impex.md
     - Random Sampling: plugins/random-sampling.md
     - Debugging: plugins/debugging.md
+  - Framework:
+    - Architecture: framework/index.md
+    - Writing Plugins: framework/writing-plugins.md
