Refactor Big-M global upper bound into own plugin

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ json-import = "cfmtoolbox.plugins.json_import"
 json-export = "cfmtoolbox.plugins.json_export"
 featureide-import = "cfmtoolbox.plugins.featureide_import"
 debug = "cfmtoolbox.plugins.debug"
+big-m = "cfmtoolbox.plugins.big_m"
 
 [tool.ruff.lint]
 extend-select = ["I"]
