--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,15 +28,16 @@ markdown_extensions:
 
 nav:
   - Introduction: index.md
-  - Getting started: getting-started.md
+  - Getting Started: getting-started.md
   - Plugins:
-    - Core Plugins: plugins/index.md
-    - FeatureIDE Import: plugins/featureide-import.md
-    - UVL Import: plugins/uvl-import.md
-    - UVL Export: plugins/uvl-export.md
-    - JSON Impex: plugins/json-impex.md
-    - Random Sampling: plugins/random-sampling.md
-    - Debugging: plugins/debugging.md
+    - Plugin Overview: plugins/index.md
+    - Core Plugins:
+      - FeatureIDE Import: plugins/featureide-import.md
+      - UVL Import: plugins/uvl-import.md
+      - UVL Export: plugins/uvl-export.md
+      - JSON Impex: plugins/json-impex.md
+      - Random Sampling: plugins/random-sampling.md
+      - Debugging: plugins/debugging.md
   - Framework:
     - Architecture: framework/index.md
     - Writing Plugins: framework/writing-plugins.md
