--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ json-export = "cfmtoolbox.plugins.json_export"
 featureide-import = "cfmtoolbox.plugins.featureide_import"
 debugging = "cfmtoolbox.plugins.debugging"
 big-m = "cfmtoolbox.plugins.big_m"
+one-wise-sampling = "cfmtoolbox.plugins.one_wise_sampling"
 
 [tool.ruff.lint]
 extend-select = ["I"]
