--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ uvl-import = "cfmtoolbox.plugins.uvl_import"
 json-import = "cfmtoolbox.plugins.json_import"
 json-export = "cfmtoolbox.plugins.json_export"
 featureide-import = "cfmtoolbox.plugins.featureide_import"
-debug = "cfmtoolbox.plugins.debug"
+debugging = "cfmtoolbox.plugins.debugging"
 big-m = "cfmtoolbox.plugins.big_m"
 
 [tool.ruff.lint]
