--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
   - Plugins:
     - Plugin Overview: plugins/index.md
     - Core Plugins:
+      - Conversion: plugins/conversion.md
       - FeatureIDE Import: plugins/featureide-import.md
       - UVL Import: plugins/uvl-import.md
       - UVL Export: plugins/uvl-export.md
