Fix main entrypoint test was consuming pytest args

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,9 @@ extend-select = ["I"]
 [tool.pytest.ini_options]
 addopts = "--cov=cfmtoolbox --cov-report term-missing --cov-report html"
 
+[tool.coverage]
+omit = ["cfmtoolbox/__main__.py"]
+
 [tool.mypy]
 check_untyped_defs = true
 
