--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ extend-select = ["I"]
 [tool.pytest.ini_options]
 addopts = "--cov=cfmtoolbox --cov-report term-missing --cov-report html"
 
-[tool.coverage]
+[tool.coverage.run]
 omit = ["cfmtoolbox/__main__.py"]
 
 [tool.mypy]
