--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,8 @@ nav:
       - UVL Export: plugins/uvl-export.md
       - JSON Impex: plugins/json-impex.md
       - Random Sampling: plugins/random-sampling.md
+      - One Wise Sampling: plugins/one-wise-sampling.md
+      - Big M: plugins/big-m.md
       - Debugging: plugins/debugging.md
   - Framework:
     - Architecture: framework/index.md
