--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,7 +36,8 @@ nav:
       - FeatureIDE Import: plugins/featureide-import.md
       - UVL Import: plugins/uvl-import.md
       - UVL Export: plugins/uvl-export.md
-      - JSON Impex: plugins/json-impex.md
+      - JSON Import: plugins/json-import.md
+      - JSON Export: plugins/json-export.md
       - Big M: plugins/big-m.md
       - Random Sampling: plugins/random-sampling.md
       - One Wise Sampling: plugins/one-wise-sampling.md
