Add model api references to the docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,32 @@ theme:
 
 plugins:
   - search
+  - mkdocstrings:
+      handlers:
+        python:
+          import:
+          - https://docs.python.org/3/objects.inv
+          - https://mkdocstrings.github.io/autorefs/objects.inv
+          - https://www.mkdocs.org/objects.inv
+          - https://python-markdown.github.io/objects.inv
+          paths: [cfmtoolbox]
+          options:
+            docstring_options:
+              ignore_init_summary: true
+            docstring_section_style: list
+            filters: ["!^_"]
+            heading_level: 1
+            inherited_members: true
+            merge_init_into_class: true
+            parameter_headings: true
+            separate_signature: true
+            show_root_heading: true
+            show_root_full_path: false
+            show_signature_annotations: true
+            show_symbol_type_heading: true
+            show_symbol_type_toc: true
+            signature_crossrefs: true
+            summary: true
 
 markdown_extensions:
   - admonition
@@ -44,4 +70,5 @@ nav:
       - Debugging: plugins/debugging.md
   - Framework:
     - Architecture: framework/index.md
+    - Models: framework/models.md
     - Writing Plugins: framework/writing-plugins.md
