--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pytest = "^8.2.0"
 pytest-cov = "^5.0.0"
 mkdocs = "^1.6.1"
 mkdocs-material = "^9.5.34"
+mkdocstrings-python = "^1.11.1"
 
 [tool.poetry.scripts]
 cfmtoolbox = "cfmtoolbox.__main__:__name__"
