Add t-wise sampling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
 python = "^3.11"
 typer = {extras = ["all"], version = "^0.12.3"}
 uvlparser = "^2.0.1"
+z3-solver = "^4.13.3.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.4"
@@ -48,6 +49,7 @@ featureide-import = "cfmtoolbox.plugins.featureide_import"
 debugging = "cfmtoolbox.plugins.debugging"
 big-m = "cfmtoolbox.plugins.big_m"
 one-wise-sampling = "cfmtoolbox.plugins.one_wise_sampling"
+t-wise-sampling = "cfmtoolbox.plugins.t_wise_sampling"
 
 [tool.ruff.lint]
 extend-select = ["I"]
