--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ big-m = "cfmtoolbox.plugins.big_m"
 one-wise-sampling = "cfmtoolbox.plugins.one_wise_sampling"
 png-export = "cfmtoolbox.plugins.png_export"
 svg-export = "cfmtoolbox.plugins.svg_export"
-visualize = "cfmtoolbox.plugins.visualize"
+subtree = "cfmtoolbox.plugins.subtree"
 
 [tool.ruff.lint]
 extend-select = ["I"]
