--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ pytest-cov = "^5.0.0"
 mkdocs = "^1.6.1"
 mkdocs-material = "^9.5.34"
 mkdocstrings-python = "^1.11.1"
+scipy = "^1.15.2"
 
 [tool.poetry.scripts]
 cfmtoolbox = "cfmtoolbox.__main__:__name__"
