--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
-typer = {extras = ["all"], version = "^0.12.3"}
+typer = "^0.12.3"
 uvlparser = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
